[gd_scene load_steps=5 format=3 uid="uid://dklif0reucask"]

[ext_resource type="Script" path="res://scripts/citizen.gd" id="1_80ism"]
[ext_resource type="Texture2D" uid="uid://q5nw03m1ixka" path="res://assets/small_unit.png" id="1_q3ydu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5woff"]
size = Vector2(2, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_muwgc"]
radius = 8.0

[node name="Citizen" type="Node2D"]
script = ExtResource("1_80ism")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_q3ydu")

[node name="ClickDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickDetection"]
shape = SubResource("RectangleShape2D_5woff")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_muwgc")

[connection signal="mouse_entered" from="ClickDetection" to="." method="_on_click_detection_mouse_entered"]
[connection signal="mouse_exited" from="ClickDetection" to="." method="_on_click_detection_mouse_exited"]
